--- a/app/src/main/res/layout/item_wine_card.xml
+++ b/app/src/main/res/layout/item_wine_card.xml
@@ -70,5 +70,14 @@
             android:textSize="13sp"
             android:layout_marginTop="2dp"/>
 
+        <TextView
+            android:id="@+id/tvWineQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estoque: 0"
+            android:textColor="#FF9800"
+            android:textSize="12sp"
+            android:layout_marginTop="2dp"/>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
