--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -116,17 +117,20 @@
     </LinearLayout>
 
     <!-- Orders list -->
+
+    <!-- Add button -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvOrders"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="4dp"
-        app:layout_constraintTop_toBottomOf="@id/filtersBarOrders"
         app:layout_constraintBottom_toTopOf="@id/bottomNavOrders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/filtersBarOrders"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Add button -->
     <ImageButton
         android:id="@+id/btnAddOrder"
         android:layout_width="56dp"
